make sure image on story box fills entire space on mobile

--- a/src/components/blocks/story-box/_story-box.scss
+++ b/src/components/blocks/story-box/_story-box.scss
@@ -187,7 +187,7 @@
 
   &__img {
     &--column, &--row {
-      height: auto;
+      height: 100%;
       object-fit: cover;
       width: 100%;
     }
